# google-cloud-platform-poc

./: README.md  pyproject.toml
experiements/: biqquery.ipynb  document_ai_sample.ipynb
