[tool.poetry]
name = "documentai"
version = "0.1.0"
description = "Sample project testing GCP cloud services"
authors = ["Micah Forster <mgfos207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kagglehub = "^0.3.3"
google-cloud-documentai = "^2.35.0"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.26.0"
pandas = "^2.2.3"
google-cloud-aiplatform = "^1.71.0"
pyarrow = "^18.0.0"
pandas-gbq = "^0.24.0"
db-dtypes = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
